refactor: :recycle: remover values de input no index.html

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     <h1>hltb-steam</h1>
 
     <div class="container">
-        <input type="password" name="apikey" id="apikey" value="1A6000333B0A40D197B9E595239442A1" >
-        <input type="password" name="steamid" id="steamid" value="76561198136172377">
+        <input type="password" name="apikey" id="apikey">
+        <input type="password" name="steamid" id="steamid">
         <button id="search">Search</button>
     </div>
 
