--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,38 @@
     <title>hltb-steam</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>hltb-steam</h1>
 
-    <div class="container">
-        <input type="password" name="apikey" id="apikey">
-        <input type="password" name="steamid" id="steamid">
+    <div class="container" id="searchInputs">
+        <input type="password" name="apikey" id="apikey" placeholder="steam api key">
+        <input type="password" name="steamid" id="steamid" placeholder="steam user id">
         <button id="search">Search</button>
+    </div>
+
+    <div class="container " id="filters">
+        <div class="row">
+            <div class="col">
+                <p>Search games</p>
+                <input class="searchinput" type="text" name="search" id="searchgame" placeholder="search" disabled>
+            </div>
+            <div class="col">
+                <p>Sort</p>
+                <select class="searchinput" name="sort" id="sort" disabled>
+                    <option value="name">Name</option>
+                    <option value="length">Length</option>
+                    <!-- <option value="main_story">Main Story</option>
+                    <option value="main_extra">Main + Extra</option>
+                    <option value="completionist">Completionist</option>
+                    <option value="combined">Combined</option> -->
+                </select>
+                <button class="searchinput" name="order" id="order" disabled>Order</button>
+            <!-- <div class="col">
+                <button class="searchinput" name="order" id="order" disabled>Order</button>
+            </div> -->
+        </div>
     </div>
 
     <div class="container text-center" id="games">
