feat: :sparkles: pasta data, todo list atualizado, novas opções e icones

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,9 @@
             <div class="col-5">
                 <input class="searchinput" type="text" name="search" id="searchgame" placeholder="search" disabled>
             </div>
-            <div class="col-5">
-                <button class="btn" id="randomBtn" disabled>RANDOM GAME</button>
+            <div class="col-5 libraryOptions">
+                <button class="btn" id="randomBtn"><i class="fa-solid fa-shuffle"></i>RANDOM GAME</button>
+                <button class="btn" id="exportBtn"><i class="fa-solid fa-download"></i>EXPORT</button>
             </div>
             <div class="col-2">
                 <select class="searchinput" name="sort" id="sort" disabled>
